--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+  	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-29363864-1', 'rthur.me');
+  ga('send', 'pageview');
+
+	</script>
   	<title>Graeme Arthur - Curriculum Vitae</title>
 	
 		<meta name="viewport" content="width=device-width"/>
@@ -145,7 +155,7 @@
 		<div id="header">
 			<div id="name">
 				<h1 class="quickFade delayTwo">Graeme <span class="muted"></span> Arthur</h1>
-				<h2 class="quickFade delayThree">Flexible Administrator</h2>
+				<h2 class="quickFade delayThree">Data Centre Operations Technician</h2>
 			</div>
 			
 			<div id="contactDetails" class="quickFade delayFour">
@@ -236,10 +246,14 @@
 				        
 			<section id="education">
 				<h1><span class="muted">Notable</span> Employment</h1>
-				<h2>Operational Support Assistant @ World Duty Free<small></small></h2>
+				<h2>Data Centre Operations Technician II 
+				<p>Rackspace <small>the #1 managed cloud company</small></p></h2>
+				<p>October 2015 - Present</p>
+				<h2>Operational Support Assistant<small></small>
+				<p>World Duty Free</p></h2>
 				<p>May 2013 - August 2013</p>
 				<h2>2008-June 2009</h2>
-				<p>I have performed work on a temporary basis, supporting my travelling and voluntary work
+				<p>I have performed work on a temporary basis, supporting my traveling and voluntary work
 				temporary UK roles included but not limited to: 
 				various agency work, (including data entry & manual labour)</p>
 				
