--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<meta name="description" content="The Curriculum Vitae of Graeme Arthur."/>
 		<meta charset="UTF-8">
 	
-	  <link href="http://fonts.googleapis.com/css?family=Lato:400,400italic|Rokkitt:700" rel="stylesheet" />
-		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" rel="stylesheet" />
-		<link href="http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" rel="stylesheet" />
+	  <link href="https://fonts.googleapis.com/css?family=Lato:400,400italic|Rokkitt:700" rel="stylesheet" />
+		<link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" rel="stylesheet" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" rel="stylesheet" />
 		<style>
 			html, body {background: #181818; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #222;}
 			h1 {color: #cf8a05; font-size: 1.75em; font-family: 'Rokkitt', Helvetica, Arial, sans-serif;}
